<resources>
    <string name="app_name">Retail Supporter</string>
    <string name="clockin">Clock in</string>
    <string name="clockout">Clock out</string>
    <string name="btn3">GPS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectDate">Select Date</string>
    <string name="StockList">Stock List :</string>
    <string name="SalesAmount">Sales Amount :</string>
    <string name="StockPrice">Sales Price :</string>
    <string name="AddTodailySales">Add to daily sales</string>
    <string name="TodaySalesTotal">Today total sales :</string>
    <string name="amount">Amount :  </string>
    <string name="price">Price :  </string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="position">Employee Position</string>
    <string name="registernewuser">Register a new user</string>
    <string name="register">Register</string>
    <string name="store">Store :</string>
    <string name="productQuantity">Product Quantity (Server) :</string>
    <string name="productQuantityCount">Product Quantity (Count) :</string>
    <string name="productName">Product Name :</string>
    <string name="saturday">Sat</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wendesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="sunday">Sun</string>
    <string name="signout">Sign Out</string>
    <string name="selectStore">Please select current store :</string>


</resources>
