<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activity.FragmentPages.RegisterUserFragment">

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerPassword"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_email"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/ic_password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/registerPasswordConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/ic_password"
        android:gravity="center"
        android:hint="@string/confirmpassword"
        android:inputType="textVisiblePassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/regPosition"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/registerPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_user"
        android:gravity="center"
        android:text="@string/position"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/registerSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regPosition"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerSpinner"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/regResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white" />
</RelativeLayout>