<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".Activity.FragmentPages.DailySalesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/dailySalesStockListTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StockList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545"
            tools:layout_editor_absoluteX="113dp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/dailySalesStockListSpinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dailySalesStockListTv"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/dailySalesSalesAmountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SalesAmount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545"
            tools:layout_editor_absoluteX="113dp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/dailySalesSalesAmountSpinner"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dailySalesSalesAmountTv"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/dailySalesPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StockPrice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545"
            tools:layout_editor_absoluteX="114dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/dailySalesPriceEt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dailySalesPriceTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:layout_editor_absoluteY="90dp">

        <Button
            android:id="@+id/dailySalesAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddTodailySales"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TodaySalesTotal"
        android:textSize="16dp"
        android:textColor="@color/white"/>

    <ListView
        android:id="@+id/dailySalesListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="246dp" />


</LinearLayout>